[project]
name = "comfy-rvc"
description = "ComfyUI custom nodes for RVC related inference and image generation"
version = "1.0.0"
license = "LICENSE"
dependencies = ["librosa~=0.10.2", "numpy", "fairseq==0.12.2", "faiss-cpu", "ffmpeg-python", "tqdm", "audioread", "audio-separator[gpu]", "onnxruntime-gpu", "ffmpy", "samplerate", "pyaudio", "spacy", "monotonic_align", "textacy", "pytube"]

[project.urls]
Repository = "https://github.com/SayanoAI/Comfy-RVC"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfy-RVC"
Icon = ""
